--- a/templates/usr/bin/jessie_mirror_aptly_sync.sh.erb
+++ b/templates/usr/bin/jessie_mirror_aptly_sync.sh.erb
@@ -21,10 +21,14 @@ date=$(date +%s)
 /usr/bin/aptly snapshot merge jessie-contrib_security-${date}-merged jessie-contrib_security jessie-contrib_security-${date}
 /usr/bin/aptly snapshot merge jessie-nonfree_security-${date}-merged jessie-nonfree_security jessie-nonfree_security-${date}
 # publish jessie mirror
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="main" jessie jessie-main-${date}-merged
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="contrib" jessie jessie-contrib-${date}-merged
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="non-free" jessie jessie-nonfree-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="main" jessie jessie-main-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="contrib" jessie jessie-contrib-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="non-free" jessie jessie-nonfree-${date}-merged
 # publish jessie-security mirror
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="main" jessie-updates jessie-main_security-${date}-merged
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="contrib" jessie-updates jessie-contrib_security-${date}-merged
-/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass %>" -component="non-free" jessie-updates jessie-nonfree_security-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="main" jessie-updates jessie-main_security-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="contrib" jessie-updates jessie-contrib_security-${date}-merged
+/usr/bin/aptly publish switch -passphrase="<%= @gpg_pass -%>" -component="non-free" jessie-updates jessie-nonfree_security-${date}-merged
+
+# ruby syntaxing:
+<%= @gpg_pass -%>
+<%= @gpg_pass %>
